italic viewing fixed

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 
             <p> This band group was formed 2011,on the <strong><em> EIGHTH SERIES of THE X FACTOR </em> </strong>become
                 the first group to actually win the competition .They all came as solo artists but as the competition
-                progressed they ended up as a group best <i>
-                    <BRITISH< /i> ladies group band</p>
+                progressed they ended up as a group best <i>BRITISH</i> ladies group band</p>
             <p>After the winning they were signed to <strong><em>SYCO.COLOMBIA.RCA UK. </em></strong></p>
             <p> They support each others s sisters, all of them are songwriters that means they write thier own songs.
                 They have done some collaboration with some of the best artist in earth.</p>
