--- a/index.html
+++ b/index.html
@@ -7,25 +7,22 @@
     <title>little mix ladies group</title>
 </head>
 <body>
-    <div class="wrapper">
-        <nav class="navbar">
-            <img class="logo" src="download.png">
-            <nav class="NAV">
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                    <li><a href="#">FEEDBACK</a></li>
-                    <li><a href="#">SHOWS</a></li>
-                </ul>
-            </nav>
-        </nav>
+    <div class="homepage">
+        <div class="intro">
+            <h1 id="title">LITTLE MIX</h1>
+            <p>
+                This band group was formed 2011,on the <strong><em> EIGHTH SERIES of THE X FACTOR </em> </strong>become
+                the first group to actually win the competition .They all came as solo artists but as the competition
+                progressed they ended up as a group best <i>BRITISH</i> ladies group band
+            </p>
+            <p>After the winning they were signed to <strong><em>SYCO.COLOMBIA.RCA UK. </em></strong></p>
+            <p> They support each others s sisters, all of them are songwriters that means they write thier own songs.
+                They have done some collaboration with some of the best artist in earth.</p>
+            <p>there shows are ranked on the best shows. Most of thier songs are always on The billboard chart.</p>
+        </div>
+    </div>
+    <!-- <div class="wrapper">
         <div class="center">
-            <br>
-            <br>
-            <br>
-            <br>
-
             <p> This band group was formed 2011,on the <strong><em> EIGHTH SERIES of THE X FACTOR </em> </strong>become
                 the first group to actually win the competition .They all came as solo artists but as the competition
                 progressed they ended up as a group best <i>BRITISH</i> ladies group band</p>
@@ -74,7 +71,7 @@
                     <br>
                 </ul>
             </div>
-        </div>
+        </div> -->
 
         <img class="Anne" src="images.jpeg" alt="Leigh-Anne Pinnock photo">
         <h1 class="blue">LEIGH-ANNE PINNOCK</h1>
