favourite songs updated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
             <p>After the winning they were signed to <strong><em>SYCO.COLOMBIA.RCA UK. </em></strong></p>
             <p> They support each others s sisters, all of them are songwriters that means they write thier own songs.
                 They have done some collaboration with some of the best artist in earth.</p>
-            <p>there shows are ranked on the best shows. Most of thier songs are always on The billboard chart.</p>
+            <p>there shows are ranked on the best shows. Most of thier songs are always on The billboard chart. These are some of thier Albums:</p>
+            <ul>
+                <li>DNA (2012)</li>
+                <li>SALUTE (2013)</li>
+                <li>GET WEIRD (2015)
+                <li>GLORY DAYS (2016)
+                <LI> LM5 (2018)</LI>
+                <li>CONFETTI (2020)</li>
+            </ul>
         </div>
     </div>
     <!-- <div class="wrapper">
@@ -111,16 +119,18 @@
         <br>
         <br>
         <br>
-        <abbr>These are the ALBUMS that they have realized:</abbr>
+        <abbr>These are my favourite songs t:</abbr>
         <div class="albums">
             <ul>
-                <li>DNA (2012)</li>
-                <li>SALUTE (2013)</li>
-                <li>GET WEIRD (2015)
-                <li>GLORY DAYS (2016)
-                <LI> LM5 (2018)</LI>
-                <li>CONFETTI (2020)</li>
+                <li>SHOUT OUT TO MY EX</li>
+                <li>BLACK MARGIC</li>
+                <li>HOLIDAY</li>
+                <li>MELODIES (2016)
+                <LI> POWER</LI>
+                
             </ul>
+        </div>
+    
 </body>
 
 </html>
