--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         </div>
 
         <div class="footer">
-            <h2>Author: </h1>
-            <p></p>
+            <h2>Author: Maureen Ougo</h1>
+            <p>Year @ 2021</p>
         </div>
     
 </body>
