index.html modified

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>little mix ladies group</title>
 </head>
+
 <body>
     <div class="homepage">
         <div class="intro">
@@ -18,7 +19,8 @@
             <p>After the winning they were signed to <strong><em>SYCO.COLOMBIA.RCA UK. </em></strong></p>
             <p> They support each others s sisters, all of them are songwriters that means they write thier own songs.
                 They have done some collaboration with some of the best artist in earth.</p>
-            <p>there shows are ranked on the best shows. Most of thier songs are always on The billboard chart. These are some of thier Albums:</p>
+            <p>there shows are ranked on the best shows. Most of thier songs are always on The billboard chart. These
+                are some of thier Albums:</p>
             <ul>
                 <li>DNA (2012)</li>
                 <li>SALUTE (2013)</li>
@@ -30,61 +32,61 @@
         </div>
     </div>
 
-        <img class="Anne" src="images.jpeg" alt="Leigh-Anne Pinnock photo">
-        <h1 class="blue">LEIGH-ANNE PINNOCK</h1>
-        <p>She was born on 4th october 1991.She is engaged to<i> Andrew Gray </i> their relationship is always private .
-            She is pregnant wih her first child</p>
-        <br>
-        <br>
-        <br>
-        <img class="Nelson" src="images (2).jpeg" alt="Jessy Nelson photo">
-        <h1 class="purple">JESSY NELSON</h1>
-        <p>she was born in 14th June 1991 .she ha quite a dating history but now she is dating Actor Sean Sagar.On 144th
-            December 2020, She announced her deprture from Little mix due to struggles with mental health. As per now
-            She is signed in Polydor Records as a Solo Artist.</p>
-        <img class="jade" src="images (3).jpeg" alt="Jade Thriwal">
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+    <img class="Anne" src="images.jpeg" alt="Leigh-Anne Pinnock photo">
+    <h1 class="blue">LEIGH-ANNE PINNOCK</h1>
+    <p>She was born on 4th october 1991.She is engaged to<i> Andrew Gray </i> their relationship is always private .
+        She is pregnant wih her first child</p>
+    <br>
+    <br>
+    <br>
+    <img class="Nelson" src="images (2).jpeg" alt="Jessy Nelson photo">
+    <h1 class="purple">JESSY NELSON</h1>
+    <p>she was born in 14th June 1991 .she ha quite a dating history but now she is dating Actor Sean Sagar.On 144th
+        December 2020, She announced her deprture from Little mix due to struggles with mental health. As per now
+        She is signed in Polydor Records as a Solo Artist.</p>
+    <img class="jade" src="images (3).jpeg" alt="Jade Thriwal">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-        <h1 class="green"> JADE THRIWAL</h1>
-        <p>She was born on 26th December 1992, She is an Egyptian and Yemeni She studied A level in Arts,Literature and
-            Media studies.</p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <img class="perrie " src="images (1).jpeg" alt="Perrie Edwards">
-        <h1 class="yellow"> PERRIE EDWARDS </h1>
-        <P>She was born on 10th July 1993, Raised in South Shields. She recieved her BTEc in performing Art. She dated
-            Zayn Malik in 2012 and they broke up 'now she is dating a professional footballer <i>Alex Oxlade.</i></P>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-       
-        <div class="favourite_songs">
-            <abbr><b>These are my favourite songs :</b></abbr>
-            <ul>
-                <li>SHOUT OUT TO MY EX</li>
-                <li>BLACK MARGIC</li>
-                <li>HOLIDAY</li>
-                <li>MELODIES (2016)
-                <LI> POWER</LI>
-            </ul>
-        </div>
+    <h1 class="green"> JADE THRIWAL</h1>
+    <p>She was born on 26th December 1992, She is an Egyptian and Yemeni She studied A level in Arts,Literature and
+        Media studies.</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <img class="perrie " src="images (1).jpeg" alt="Perrie Edwards">
+    <h1 class="yellow"> PERRIE EDWARDS </h1>
+    <P>She was born on 10th July 1993, Raised in South Shields. She recieved her BTEc in performing Art. She dated
+        Zayn Malik in 2012 and they broke up 'now she is dating a professional footballer <i>Alex Oxlade.</i></P>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-        <div class="footer">
-            <h2>Author: Maureen Ougo</h1>
+    <div class="favourite_songs">
+        <abbr><b>These are my favourite songs :</b></abbr>
+        <ul>
+            <li>SHOUT OUT TO MY EX</li>
+            <li>BLACK MARGIC</li>
+            <li>HOLIDAY</li>
+            <li>MELODIES (2016)
+            <LI> POWER</LI>
+        </ul>
+    </div>
+
+    <div class="footer">
+        <h2>Author: Maureen Ougo</h1>
             <p>Year @ 2021</p>
-        </div>
-    
+    </div>
+
 </body>
 
 </html>
