--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 They have done some collaboration with some of the best artist in earth.</p>
             <p>there shows are ranked on the best shows. Most of thier songs are always on The billboard chart. These
                 are some of thier Albums:</p>
-            <ul>
+            <ul id="albums">
                 <li>DNA (2012)</li>
                 <li>SALUTE (2013)</li>
                 <li>GET WEIRD (2015)
